--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,12 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <!-- Add this link to your HTML file's head section -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+    />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
