--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Summit</title>
+    <title>MIT-WPU Summit'24</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
